--- a/sentiment_analysis_amzFood.ipynb
+++ b/sentiment_analysis_amzFood.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# Sentiment Analysis in Python\n",
         "\n",
-        "Sentiment analysis in python using two different techniques and then comparing their sore:\n",
+        "Sentiment analysis in python using two different techniques and then comparing their score:\n",
         "1. VADER (Valence Aware Dictionary and sEntiment Reasoner) - Bag of words approach\n",
         "2. Roberta Pretrained Model"
       ]
